<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_with_tools</name>
  <version>1.0.0</version>
  <description>Meta package for LBR robot  with tools</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lbr_fri_ros2_stack</exec_depend>
  <exec_depend>lbr_tools</exec_depend>
  <exec_depend>lbr_da_vinci_endoscope</exec_depend>
  <exec_depend>lbr_storz_endoscope</exec_depend>
  <exec_depend>lbr_storz_exoscope</exec_depend>
  <exec_depend>lbr_storz_straight_exoscope_hsi</exec_depend>
  <exec_depend>lbr_storz_tilt_endoscope</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
