<?xml version="1.0"?>
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lbr_storz_endoscope_description</name>
  <version>1.0.0</version>
  <description>lbr_storz_endoscope_description</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>lbr_description</exec_depend>
  <exec_depend>storz_endoscope_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
