<?xml version="1.0"?>
<package format="2">
  <name>lbr_storz_exoscope_description</name>
  <version>1.0.0</version>
  <description>lbr_storz_exoscope_description</description>
  <maintainer email="m.huber_1994@hotmail.de">mhubii</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>lbr_description</exec_depend>
  <exec_depend>storz_exoscope_description</exec_depend>

</package>
